# electricity_demand_forecasting

./: .gitignore  README.md  notes_on_methods.md  pyproject.toml  unzip.sh
Archive/: BOM_etl.py  GoogleColab.ipynb  NS_Test.ipynb  combined_plots.py  csv_to_parquet.py  denormalize_MAE.ipynb  eda.ipynb  eda_gfx_lagPlots.ipynb  eda_gfx_outlierPlots.ipynb  eda_gfx_seasonalPolarPlots.ipynb  exponential smoothing.ipynb  feature engineering.py  forecast_demand.ipynb  lstm_lr.py  lstm_model2.py  lstm_model_single_file.py  lstm_with_attention_model.py  merge_project_data.py  nsw_clean_merge.ipynb  nsw_clean_merge.py  nsw_demand_eda.ipynb  prophet_model.py  prophet_sweeps.py  qld_eda.ipynb  unzip_process.py  vic_eda.ipynb  xgb_model_single_file.py  xgb_sweeps.py  xgb_tuning.py  xgboost_model.ipynb
Noels_folder/: noels_test_object.py
agendas/: README.md
dodgy_models/: exponential smoothing.ipynb  exponential_smoothing.py  linear_regression.py  machine_learning_pipeline.py  prophet_model.py  xgb_model.py  xgboost_model.ipynb
literature_review/: Literature Review.odt  Literature review - Articles.odt  nem_data_summary.md
report/: unsw-ZZSC9020-Project-Plan-GroupO.docx
reuben/: markov_funcs.py  model_building.py  new_demand_data.py  test.py  utils.py
src/: 7_day_outlook_eda.ipynb  GoogleColab.ipynb  Group_O_Final_Report.ipynb  NEM_etl.py  NS_Test.ipynb  Price Prep.py  Price_Prep.py  README.md  checks.ipynb  config.py  csv_to_parquet.py  denormalize_MAE.ipynb  eda.ipynb  eda_and_feature_engineering.ipynb  eda_gfx_lagPlots.ipynb  eda_gfx_outlierPlots.ipynb  eda_gfx_seasonalPolarPlots.ipynb  feature engineering.py  historical_forecast_accuracy.ipynb  lag plots.ipynb  lstm_config.py  lstm_functions.py  lstm_model.py  lstm_model2.py  lstm_model_single_file.py  lstm_test.py  lstm_v3.py  lstm_with_attention_model.py  merge_project_data.py  model_checkpoint.pt  model_checkpoint.pth  model_checkpoint_1.pt  modelling_notebook.ipynb  nsw_clean_merge.ipynb  nsw_clean_merge.py  nsw_demand_eda.ipynb  nsw_eda.ipynb  operational_demand_0223-0324_eda.ipynb  predemand_assembly.py  (+24 more)
(+32 files in other folders)
